Fix dark mode

--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: var(--hintergrund);
+    color: var(--text);
 }
 * {
     box-sizing: border-box;
